--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "discord.js": "^12.3.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "quick.db": "^7.1.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
